feat: complete Inicio
Done Work(component Inicio).

--- a/src/app/public/components/inicio/inicio.component.html
+++ b/src/app/public/components/inicio/inicio.component.html
@@ -37,8 +37,60 @@
   </div>
   <div class="apartado3">
     <p>Notificaciones</p>
-    <section>
+    <section class="notifications">
+      <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title-group>
+              <mat-card-title>Mensaje: </mat-card-title>
+            </mat-card-title-group>
+          </mat-card-header>
+          <mat-card-content>
+            <p>Viendo tu avance, te recomiendo que realices más días ejercicios de piernas y cumplas con la meta nutricional que se te proporcionó</p>
+          </mat-card-content>
+      </mat-card>
 
+      <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title-group>
+              <mat-card-title>Mensaje: </mat-card-title>
+            </mat-card-title-group>
+          </mat-card-header>
+          <mat-card-content>
+            <p>Viendo tu avance, te recomiendo que realices más días ejercicios de piernas y cumplas con la meta nutricional que se te proporcionó</p>
+          </mat-card-content>
+      </mat-card>
+
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title>Mensaje: </mat-card-title>
+          </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Viendo tu avance, te recomiendo que realices más días ejercicios de piernas y cumplas con la meta nutricional que se te proporcionó</p>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title>Mensaje: </mat-card-title>
+          </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Viendo tu avance, te recomiendo que realices más días ejercicios de piernas y cumplas con la meta nutricional que se te proporcionó</p>
+        </mat-card-content>
+      </mat-card>
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title>Mensaje: </mat-card-title>
+          </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Viendo tu avance, te recomiendo que realices más días ejercicios de piernas y cumplas con la meta nutricional que se te proporcionó</p>
+        </mat-card-content>
+      </mat-card>
     </section>
   </div>
 </div>
