--- a/src/app/public/components/inicio/inicio.component.css
+++ b/src/app/public/components/inicio/inicio.component.css
@@ -19,18 +19,18 @@
 .apartado2 {
   display: flex;
   justify-content: space-between;
-  background-color: #999999;
+  background-color: #aaaaaa;
 }
 .apartado3 {
   margin: 50px 30px 30px;
   font-size: 30px;
 }
 .block {
-  background-color: #666666; /* plomo */
+  background-color: #666666;
   border: 3px solid white;
   border-radius: 10px;
-  width: 400px; /* ajusta según tus necesidades */
-  height: 80px; /* ajusta según tus necesidades */
+  width: 400px;
+  height: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,6 +52,41 @@
     font-size: 20px;
     width: 150px;
     height: 30px;
-
   }
+}
+.notifications {
+  background-color: #d9d9d9;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+mat-card-title {
+  font-size: 1em;
+  align-items: baseline;
+  padding: 0;
+}
+
+mat-card-content {
+  padding: 0;
+}
+
+.example-card {
+  background-color: #d9d9d9;
+  border: 2px solid white;
+  margin: 1em 1em 1em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0.5em;
+  border-radius: 10px;
+  width: 60%;
+  height: 80%;
+}
+.mat-mdc-card-header {
+  display: flex;
+  padding: 0;
+}
+.mat-mdc-card-content:last-child {
+  padding-bottom: 0;
 }
