feat: implemented routes for components.

--- a/src/app/member/components/member-profile/member-profile.component.html
+++ b/src/app/member/components/member-profile/member-profile.component.html
@@ -1,3 +1,11 @@
+<header style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;">
+  <a routerLink="/member-dashboard">
+    <img src="assets/images/icons/back-icon.png" alt="member-icon" style="width: 30px; height: 50px; margin-top: 15%; margin-left: 5%">
+  </a>
+  <a routerLink="/member-profile">
+    <img src="assets/images/member/member-icon.png" alt="member-icon" style="width: 50px; height: 50px; margin-top: 15%">
+  </a>
+</header>
 
 <div class="background">
   <div class="container">
@@ -5,7 +13,7 @@
       <div class="user-info">
         <div class="images">
           <img class="user-icon" src="https://cdn-icons-png.flaticon.com/512/3237/3237472.png" alt="icono representando al usuario">
-          <img class="user-image"src="https://t4.ftcdn.net/jpg/03/64/21/11/360_F_364211147_1qgLVxv1Tcq0Ohz3FawUfrtONzz8nq3e.jpg" alt="imagen del usurio">
+          <img class="user-image" src="https://t4.ftcdn.net/jpg/03/64/21/11/360_F_364211147_1qgLVxv1Tcq0Ohz3FawUfrtONzz8nq3e.jpg" alt="imagen del usurio">
         </div>
         <div class="info">
           <h3> Perfil </h3>
