--- a/src/app/member/components/member-trainings/member-trainings.component.html
+++ b/src/app/member/components/member-trainings/member-trainings.component.html
@@ -23,7 +23,11 @@
           <p style="margin-top: 15% !important;">Ejercicios</p>
         </a>
       </button>
-      <button mat-raised-button class="trainings-buttons" >Profesionales</button>
+      <button mat-raised-button class="trainings-buttons" >
+        <a routerLink="/coach">
+          <p style="margin-top: 15% !important;">Profesionales</p>
+        </a>
+      </button>
       <button mat-raised-button class="trainings-buttons" >Dietas</button>
     </div>
     </section>
