--- a/src/app/coach/components/coach-contact/coach-contact.component.html
+++ b/src/app/coach/components/coach-contact/coach-contact.component.html
@@ -1,3 +1,12 @@
+<header style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;">
+  <a routerLink="/coach">
+    <img src="assets/images/icons/back-icon.png" alt="member-icon" style="width: 30px; height: 50px; margin-top: 15%; margin-left: 5%">
+  </a>
+  <a routerLink="/member-profile">
+    <img src="assets/images/member/member-icon.png" alt="member-icon" style="width: 50px; height: 50px; margin-top: 15%">
+  </a>
+</header>
+
 <div class="background">
   <div class="register-container">
     <div class="register-form">
