--- a/src/app/coach/components/coach-information/coach-information.component.html
+++ b/src/app/coach/components/coach-information/coach-information.component.html
@@ -1,9 +1,19 @@
+<header style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;">
+  <a routerLink="/member-trainings">
+    <img src="assets/images/icons/back-icon.png" alt="member-icon" style="width: 30px; height: 50px; margin-top: 15%; margin-left: 5%">
+  </a>
+  <a routerLink="/member-profile">
+    <img src="assets/images/member/member-icon.png" alt="member-icon" style="width: 50px; height: 50px; margin-top: 15%">
+  </a>
+</header>
 
 <mat-card class="card-component">
   <div class="nombre-contacto">
-    <img src="assets/entrenador.png" width="50" height="50">
+    <img src="assets/entrenador.png" alt="" width="50" height="50">
     <mat-card-header>Coach</mat-card-header>
+    <a routerLink="/contact-coach">
     <button class="color-boton">Contactar</button>
+    </a>
   </div>
   <div class="foto-informacion">
     <img src="https://i.pinimg.com/originals/22/b1/bd/22b1bd193966a3f59f88ff3c6865cb21.jpg" alt="Foto de perfil de coach" width="250" height="300">
