--- a/src/app/public/components/login/login.component.html
+++ b/src/app/public/components/login/login.component.html
@@ -13,7 +13,10 @@
     <input matInput placeholder="Contraseña" type="password">
   </mat-form-field>
   <div class="button-container">
-    <button mat-raised-button color="primary" class="button-login">Ingresar</button>
+
+    <a routerLink="/member-dashboard">
+      <button mat-raised-button color="primary" class="button-login">Ingresar</button>
+    </a>
     <button mat-raised-button color="accent" class="button-register" (click)="onRegisterClick()">Registrar</button>
   </div>
   <button mat-button color="primary" class="forgot-password" (click)="onRecoveryPasswordClick()">¿Olvidaste tu contraseña?</button>
