feat: implemented footer in certain components.

--- a/src/app/coach/components/coach-information/coach-information.component.html
+++ b/src/app/coach/components/coach-information/coach-information.component.html
@@ -29,3 +29,9 @@
     <mat-card >Al inscribirse con un coach especialista en tonificación muscular, un alumno puede esperar un enfoque personalizado y profesional que incluye evaluación inicial, planificación de entrenamiento específico para tonificar los músculos, orientación nutricional, supervisión durante las sesiones de ejercicio y seguimiento regular para ajustar el programa según el progreso. Este enfoque integral busca optimizar el desarrollo de fuerza, resistencia y definición muscular, adaptándose a las metas individuales del alumno y promoviendo un estilo de vida saludable y activo.</mat-card>
   </div>
 </mat-card>
+
+<footer style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px; margin-top: 3%">
+  <p style="margin-left: 15%">&copy; 2024 FitHub Pro - Todos los derechos reservados</p>
+  <p>Dirección: Av. de la Fuerza, 123, Ciudad Gimnasio</p>
+  <p style="margin-right: 15%">Teléfono: (555) 123-4567 | Email: info&commat;FitHubPro.com</p>
+</footer>
