--- a/src/app/member/components/member-dashboard/member-dashboard.component.html
+++ b/src/app/member/components/member-dashboard/member-dashboard.component.html
@@ -49,6 +49,12 @@
   </mat-card>
 </div>
 
+<footer style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;margin-top: 2%">
+  <p style="margin-left: 15%">&copy; 2024 FitHub Pro - Todos los derechos reservados</p>
+  <p>Dirección: Av. de la Fuerza, 123, Ciudad Gimnasio</p>
+  <p style="margin-right: 15%">Teléfono: (555) 123-4567 | Email: info&commat;FitHubPro.com</p>
+</footer>
+
 <style>
   .sections-card {
     width: 500px;
@@ -66,7 +72,7 @@
   }
   .notifications-card{
     width: 80%;
-    height: 450px;
+    height: 480px;
     margin-left: 10%;
     align-items: center;
     background-color: #D9D9D9;
