--- a/src/app/coach/components/coach-contact/coach-contact.component.html
+++ b/src/app/coach/components/coach-contact/coach-contact.component.html
@@ -31,4 +31,9 @@
       <button mat-raised-button color="primary">  Enviar Formulario  </button>
     </div>
   </div>
+  <footer  style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;">
+    <p style="margin-left: 15%">&copy; 2024 FitHub Pro - Todos los derechos reservados</p>
+    <p>Dirección: Av. de la Fuerza, 123, Ciudad Gimnasio</p>
+    <p style="margin-right: 15%">Teléfono: (555) 123-4567 | Email: info&commat;FitHubPro.com</p>
+  </footer>
 </div>
