--- a/src/app/member/components/member-trainings/member-trainings.component.html
+++ b/src/app/member/components/member-trainings/member-trainings.component.html
@@ -52,3 +52,9 @@
     </mat-card>
   </mat-card>
 </div>
+
+<footer style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;">
+  <p style="margin-left: 15%">&copy; 2024 FitHub Pro - Todos los derechos reservados</p>
+  <p>Dirección: Av. de la Fuerza, 123, Ciudad Gimnasio</p>
+  <p style="margin-right: 15%">Teléfono: (555) 123-4567 | Email: info&commat;FitHubPro.com</p>
+</footer>
