feat(auth): update login, register, and recovery UI

--- a/src/app/public/components/login/login.component.html
+++ b/src/app/public/components/login/login.component.html
@@ -7,7 +7,7 @@
 </div>
 <div class="login-container">
   <mat-form-field appearance="fill">
-    <input matInput placeholder="Usuario" type="email">
+    <input matInput placeholder="Correo electrónico" type="email">
   </mat-form-field>
   <mat-form-field appearance="fill">
     <input matInput placeholder="Contraseña" type="password">
@@ -16,5 +16,5 @@
     <button mat-raised-button color="primary" class="button-login">Ingresar</button>
     <button mat-raised-button color="accent" class="button-register" (click)="onRegisterClick()">Registrar</button>
   </div>
-  <button mat-button color="primary" class="forgot-password" (click)="onRecoveryPasswordClick()">¿Olvidaste tu contraseña?</button>
+  <button mat-button color="primary"  (click)="onRecoveryPasswordClick()">¿Olvidaste tu contraseña?</button>
 </div>
