--- a/src/app/public/components/login/login.component.css
+++ b/src/app/public/components/login/login.component.css
@@ -1,5 +1,5 @@
 .background-image {
-  background-image: url('https://img.freepik.com/foto-gratis/surtido-plano-deliciosa-comida-brasilena_23-2148739179.jpg');
+  background-image: url('https://www.sahilleza.com/blog/wp-content/uploads/2019/10/alimentosejercicio.jpg');
   background-size: cover;
   width: 100%;
   height: 55vh;
@@ -42,8 +42,17 @@
 .button-login,
 .button-register{
   margin: 0 10px 10px 10px;
-  border-radius: 5px;
 }
+
+mat-form-field {
+  width: 25%;
+}
+
+
+
+
+
+
 
 @media (max-width: 611px) {
   .welcome-text h1 {
@@ -58,5 +67,9 @@
     font-size: 15px;
     line-height: 1.5;
     margin-bottom: 10px;
+  }
+
+  mat-form-field {
+    width: 50%;
   }
 }
