--- a/src/app/public/components/recovery-password/recovery-password.component.css
+++ b/src/app/public/components/recovery-password/recovery-password.component.css
@@ -1,24 +1,50 @@
 .background {
-  background: linear-gradient(to bottom right, #4f86f7, #6ab0f3);
+  background: url('https://www.bellezapura.com/wp-content/uploads/2020/05/mujer-corriendo.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   position: fixed;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
-.register-container {
+.background::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: inherit;
+  -webkit-filter: blur(5px);
+  filter: blur(5px);
+  z-index: 1;
+}
+
+
+.recovery-container {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+  z-index: 2;
+  position: relative;
 }
 
-.register-form {
+.recovery-form {
   background-color: white;
   border-radius: 10px;
-  padding: 20px;
-  width: 300px;
+  padding: 40px;
+  width: 400px;
   text-align: center;
+  margin: auto;
+}
+
+mat-form-field {
+  margin-bottom: 10px;
 }
 
 .title{
@@ -27,4 +53,5 @@
   border-radius: 10px;
   padding: 10px 0;
   color: white;
+  margin-bottom: 35px;
 }
