--- a/src/app/public/components/recovery-password/recovery-password.component.html
+++ b/src/app/public/components/recovery-password/recovery-password.component.html
@@ -1,10 +1,7 @@
 <div class="background">
-  <div class="register-container">
-    <div class="register-form">
+  <div class="recovery-container">
+    <div class="recovery-form">
       <h2 class="title">¿Olvidaste tu contraseña?</h2>
-      <mat-form-field appearance="fill">
-        <input matInput placeholder="Usuario" type="text">
-      </mat-form-field>
       <mat-form-field appearance="fill">
         <input matInput placeholder="Correo electrónico" type="email">
       </mat-form-field>
