--- a/src/app/public/components/register/register.component.css
+++ b/src/app/public/components/register/register.component.css
@@ -1,8 +1,26 @@
 .background {
-  background: linear-gradient(to bottom right, #4f86f7, #6ab0f3);
+  background: url('https://www.bellezapura.com/wp-content/uploads/2020/05/mujer-corriendo.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   position: fixed;
   width: 100%;
   height: 100%;
+  z-index: -1;
+}
+
+.background::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: inherit;
+  -webkit-filter: blur(5px);
+  filter: blur(5px);
+  z-index: 1;
 }
 
 .register-container {
@@ -11,6 +29,8 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 2;
 }
 
 .register-form {
