--- a/src/app/coach/components/coach-contact/coach-contact.component.html
+++ b/src/app/coach/components/coach-contact/coach-contact.component.html
@@ -2,21 +2,16 @@
   <div class="register-container">
     <div class="register-form">
       <h2 class="title">Contacta al Coach</h2>
-      <h2>Nombre Completo </h2>
       <mat-form-field appearance="fill">
         <input matInput placeholder="Nombre Completo" type="text">
       </mat-form-field>
-      <h2>Correo Electrónico </h2>
       <mat-form-field appearance="fill">
-        <input matInput placeholder="Correo Electrónico" type="password">
+        <input matInput placeholder="Correo Electrónico" type="email">
       </mat-form-field>
-      <h2>Teléfono</h2>
       <mat-form-field appearance="fill">
-        <input matInput placeholder="Teléfono" type="email">
+        <input matInput placeholder="Teléfono" type="tel">
       </mat-form-field>
-      <h2>Mensaje </h2>
       <mat-form-field class="example-full-width">
-        <mat-label>Mensaje</mat-label>
         <textarea matInput placeholder="Ejemplo: Buenas tardes..."></textarea>
       </mat-form-field>
       <button mat-raised-button color="primary">  Enviar Formulario  </button>
