--- a/src/app/coach/components/coach-information/coach-information.component.html
+++ b/src/app/coach/components/coach-information/coach-information.component.html
@@ -13,6 +13,8 @@
       <h3>Localización: Lima - Perú</h3>
       <h3>Teléfono: 980 479 651</h3>
       <h3>Edad: 26</h3>
+      <h3>Clientes actuales: 6</h3>
+
     </div>
   </div>
   <div class="card-especifico">
