--- a/src/app/coach/components/coach-information/coach-information.component.css
+++ b/src/app/coach/components/coach-information/coach-information.component.css
@@ -119,3 +119,58 @@ h3{
   font-weight: bold;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
+
+
+
+@media (max-width: 768px) {
+  .card-component {
+    max-width: 100%;
+    padding: 5px;
+    padding-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .color-boton {
+    min-width: auto;
+    min-height: auto;
+    font-size: 12px;
+  }
+
+  .card-especifico mat-card {
+    padding: 20px;
+    font-size: 16px;
+  }
+
+  .nombre-contacto img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .nombre-contacto button {
+    margin-left: 5px;
+    font-size: 12px;
+  }
+
+  .foto-informacion {
+    padding: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+
+  .information {
+    padding: 20px;
+    padding-bottom: 10px;
+  }
+
+  h3 {
+    font-size: 18px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .nombre-coach {
+    font-size: 16px;
+    padding: 15px;
+  }
+}
