feat: update router links for coach-dashboard

--- a/src/app/coach/components/coach-dashboard/coach-dashboard.component.html
+++ b/src/app/coach/components/coach-dashboard/coach-dashboard.component.html
@@ -12,15 +12,15 @@
 <div class="sections">
   <mat-card class="sections-card">
     <p>Rutinas</p>
-    <button mat-raised-button class="sections-button" routerLink="/member-trainings">Administrar</button>
+    <button mat-raised-button class="sections-button" routerLink="/coach-plans">Administrar</button>
   </mat-card>
   <mat-card class="sections-card">
     <p>Clientes</p>
-    <button mat-raised-button class="sections-button">Ver</button>
+    <button mat-raised-button class="sections-button" routerLink="/coach-member-list">Ver</button>
   </mat-card>
   <mat-card class="sections-card">
     <p>Progreso</p>
-    <button mat-raised-button class="sections-button">Administrar</button>
+    <button mat-raised-button class="sections-button" routerLink="/coach-progress">Administrar</button>
   </mat-card>
 </div>
 
