--- a/src/app/public/components/recovery-password/recovery-password.component.html
+++ b/src/app/public/components/recovery-password/recovery-password.component.html
@@ -2,10 +2,15 @@
   <div class="recovery-container">
     <div class="recovery-form">
       <h2 class="title">¿Olvidaste tu contraseña?</h2>
-      <mat-form-field appearance="fill">
-        <input matInput placeholder="Correo electrónico" type="email">
-      </mat-form-field>
-      <button mat-raised-button color="primary">Recuperar contraseña</button>
+      <form [formGroup]="recoveryForm" (ngSubmit)="onRecover()">
+        <mat-form-field appearance="fill">
+          <input matInput placeholder="Correo electrónico" formControlName="email" type="email">
+          <mat-error *ngIf="recoveryForm.get('email')?.hasError('required')">Correo es requerido</mat-error>
+          <mat-error *ngIf="recoveryForm.get('email')?.hasError('email')">Correo inválido</mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit" [disabled]="recoveryForm.invalid">Recuperar contraseña</button>
+      </form>
+      <mat-error *ngIf="errorMessage">{{ errorMessage }}</mat-error>
     </div>
   </div>
 </div>
