feat: update component-chat & services
Se actualizo el componente chat y los servicios correspondientes al funcionamiento del chat

--- a/src/app/coach/components/coach-dashboard/coach-dashboard.component.html
+++ b/src/app/coach/components/coach-dashboard/coach-dashboard.component.html
@@ -1,8 +1,13 @@
 <header class="header">
   <h1>FitHub Pro</h1>
-  <a routerLink="/member-profile">
-    <img src="assets/images/member/member-icon.png" alt="member-icon" class="member-icon">
-  </a>
+  <div class="icon-container">
+    <a routerLink="/coach-profile">
+      <img src="assets/images/member/member-icon.png" alt="coach-icon" class="member-icon">
+    </a>
+    <a routerLink="/chat">
+      <img src="assets/images/icons/chat-icon.png" alt="chat-icon" class="chat-icon">
+    </a>
+  </div>
 </header>
 
 <div class="sentence">
