--- a/src/app/coach/components/coach-dashboard/coach-dashboard.component.css
+++ b/src/app/coach/components/coach-dashboard/coach-dashboard.component.css
@@ -23,6 +23,13 @@ body {
   width: 50px;
   height: 50px;
   margin-top: 15%;
+  margin-right: 10px;
+}
+
+.header .chat-icon {
+  width: 50px;
+  height: 50px;
+  margin-top: 15%;
 }
 
 /* Sección de frases */
