--- a/src/app/coach/components/coach-information/coach-information.component.css
+++ b/src/app/coach/components/coach-information/coach-information.component.css
@@ -3,7 +3,7 @@
   background: linear-gradient( to bottom right, #4f86f7, #6ab0f3);
   border-radius: 20px;
   padding: 10px;
-  max-width: 80%;
+  max-width: 60%;
   margin: auto;
   padding-bottom: 30px;
   margin-top: 40px;
@@ -42,18 +42,6 @@
 }
 
 
-.card-especifico mat-card{
-  width: 90%;
-  align-items: center;
-  background-color: #D6EBFF;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 30px;
-  font-size: 20px;
-  line-height: 1.5;margin-top: 20px;
-  border-radius: 20px;
-}
-
 .nombre-contacto{
   display: flex;
   align-items: center;
@@ -89,35 +77,32 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px;
-  margin-right: 56px;
-  margin-left: 56px;
+  padding: 10px;
   border-radius: 20px;
 }
 
 .information{
-  padding: 50px;
+  padding: 5px;
   padding-bottom: 20px;
+}
+
+.foto-informacion img {
+  margin-right: 10vh;
 }
 
 h3{
   align-items: center;
   display: flex;
-  padding: 8px;
-  border-radius: 20px;
+  padding: 2px;
   padding-left: 15px;
-  padding-right: 15px;
-  background-color: #D6EBFF;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 0;
 }
 
 .nombre-coach{
   align-items: center;
-  background-color: #D6EBFF;
   display: flex;
   font-size: 20px;
   font-weight: bold;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -136,11 +121,6 @@ h3{
     font-size: 12px;
   }
 
-  .card-especifico mat-card {
-    padding: 20px;
-    font-size: 16px;
-  }
-
   .nombre-contacto img {
     width: 50px;
     height: 50px;
@@ -157,17 +137,6 @@ h3{
     margin-left: 20px;
   }
 
-  .information {
-    padding: 20px;
-    padding-bottom: 10px;
-  }
-
-  h3 {
-    font-size: 18px;
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
 
   .nombre-coach {
     font-size: 16px;
