--- a/src/app/coach/components/coach-information/coach-information.component.html
+++ b/src/app/coach/components/coach-information/coach-information.component.html
@@ -7,28 +7,70 @@
   </a>
 </header>
 
+<div class="nombre-contacto">
+  <img src="assets/entrenador.png" alt="" width="50" height="50">
+  <mat-card-header>Entrenadores Físicos</mat-card-header>
+
+</div>
+
 <mat-card class="card-component">
-  <div class="nombre-contacto">
-    <img src="assets/entrenador.png" alt="" width="50" height="50">
-    <mat-card-header>Coach</mat-card-header>
-    <a routerLink="/contact-coach">
-    <button class="color-boton">Contactar</button>
-    </a>
-  </div>
+<!-- Falta llamar a la api, pero esta es la estructura-->
   <div class="foto-informacion">
-    <img src="https://i.pinimg.com/originals/22/b1/bd/22b1bd193966a3f59f88ff3c6865cb21.jpg" alt="Foto de perfil de coach" width="250" height="300">
+    <img src="https://i.pinimg.com/originals/22/b1/bd/22b1bd193966a3f59f88ff3c6865cb21.jpg" alt="Foto de perfil de coach" width="150" height="200">
     <div class="information">
       <h3 class="nombre-coach">Valentina Sofia Lopez Vergara</h3>
+      <h3>Localización: Perú</h3>
       <h3>Especialización: Tonificación Muscular</h3>
-      <h3>Localización: Lima - Perú</h3>
-      <h3>Teléfono: 980 479 651</h3>
-      <h3>Edad: 26</h3>
-      <h3>Clientes actuales: 6</h3>
-
+      <h3>Años de experiencia: 6</h3>
+      <a routerLink="/contact-coach">
+        <button class="color-boton">Contactar</button>
+      </a>
     </div>
   </div>
-  <div class="card-especifico">
-    <mat-card >Al inscribirse con un coach especialista en tonificación muscular, un alumno puede esperar un enfoque personalizado y profesional que incluye evaluación inicial, planificación de entrenamiento específico para tonificar los músculos, orientación nutricional, supervisión durante las sesiones de ejercicio y seguimiento regular para ajustar el programa según el progreso. Este enfoque integral busca optimizar el desarrollo de fuerza, resistencia y definición muscular, adaptándose a las metas individuales del alumno y promoviendo un estilo de vida saludable y activo.</mat-card>
+</mat-card>
+
+<!-- Pondré más cartas hardcodeadas para dar el ejemplo de como se vería con el llamado a la api-->
+
+<mat-card class="card-component">
+  <div class="foto-informacion">
+    <img src="https://i.pinimg.com/originals/22/b1/bd/22b1bd193966a3f59f88ff3c6865cb21.jpg" alt="Foto de perfil de coach" width="150" height="200">
+    <div class="information">
+      <h3 class="nombre-coach">Valentina Sofia Lopez Vergara</h3>
+      <h3>Localización: Perú</h3>
+      <h3>Especialización: Tonificación Muscular</h3>
+      <h3>Años de experiencia: 6</h3>
+      <a routerLink="/contact-coach">
+        <button class="color-boton">Contactar</button>
+      </a>
+    </div>
+  </div>
+</mat-card>
+<mat-card class="card-component">
+  <div class="foto-informacion">
+    <img src="https://i.pinimg.com/originals/22/b1/bd/22b1bd193966a3f59f88ff3c6865cb21.jpg" alt="Foto de perfil de coach" width="150" height="200">
+    <div class="information">
+      <h3 class="nombre-coach">Valentina Sofia Lopez Vergara</h3>
+      <h3>Localización: Perú</h3>
+      <h3>Especialización: Tonificación Muscular</h3>
+      <h3>Años de experiencia: 6</h3>
+      <a routerLink="/contact-coach">
+        <button class="color-boton">Contactar</button>
+      </a>
+    </div>
+  </div>
+</mat-card>
+<mat-card class="card-component">
+  <div class="foto-informacion">
+    <img src="https://i.pinimg.com/originals/22/b1/bd/22b1bd193966a3f59f88ff3c6865cb21.jpg" alt="Foto de perfil de coach" width="150" height="200">
+    <div class="information">
+      <h3 class="nombre-coach">Valentina Sofia Lopez Vergara</h3>
+      <h3>Localización: Perú</h3>
+      <h3>Especialización: Tonificación Muscular</h3>
+      <h3>Años de experiencia: 6</h3>
+      <a routerLink="/contact-coach">
+        <button class="color-boton">Contactar</button>
+      </a>
+    </div>
   </div>
 </mat-card>
 
