--- a/src/app/coach/components/coach-contact/coach-contact.component.html
+++ b/src/app/coach/components/coach-contact/coach-contact.component.html
@@ -1,5 +1,5 @@
 <header style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;">
-  <a routerLink="/coach">
+  <a routerLink="/search/coach">
     <img src="assets/images/icons/back-icon.png" alt="member-icon" style="width: 30px; height: 50px; margin-top: 15%; margin-left: 5%">
   </a>
   <a routerLink="/member-profile">
@@ -15,13 +15,10 @@
         <input matInput placeholder="Nombre Completo" type="text">
       </mat-form-field>
       <mat-form-field appearance="fill">
-        <input matInput placeholder="Correo Electrónico" type="email">
-      </mat-form-field>
-      <mat-form-field appearance="fill">
         <input matInput placeholder="Teléfono" type="tel">
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <textarea matInput placeholder="Ejemplo: Buenas tardes..."></textarea>
+        <textarea matInput placeholder="Ejemplo: Quiero ser su cliente..."></textarea>
       </mat-form-field>
       <button mat-raised-button color="primary">  Enviar Formulario  </button>
     </div>
