--- a/src/app/member/components/member-trainings/member-trainings.component.html
+++ b/src/app/member/components/member-trainings/member-trainings.component.html
@@ -12,7 +12,7 @@
     <section class="training-card-header">
       <div class="question-box">
         <img src="assets/images/member/member-icon.png" alt="Member Icon" class="question-icon">
-        <button mat-raised-button class="routine-button">¿Qué rutina vas a seguir hoy?</button>
+        <button mat-raised-button class="routine-button">¿Qué ejercicio vas a seguir hoy?</button>
       </div>
 
       <div class="buttons-section">
