--- a/src/app/member/components/member-dashboard/member-dashboard.component.css
+++ b/src/app/member/components/member-dashboard/member-dashboard.component.css
@@ -24,7 +24,15 @@ body {
 .header .member-icon {
   width: 50px;
   height: 50px;
+  margin-right: 10px;
 }
+.header .chat-icon {
+  width: 50px;
+  height: 50px;
+  margin-top: 15%;
+}
+
+
 
 /* Sección de frases */
 .sentence {
