feat: add member-progress and service

--- a/src/app/coach/components/coach-information/coach-information.component.html
+++ b/src/app/coach/components/coach-information/coach-information.component.html
@@ -22,7 +22,7 @@
         </a>
       </div>
       <div class="foto-informacion">
-        <img [src]="coach.fotoPerfil" alt="Foto de perfil de coach nutricional" width="250" height="300">
+        <img [src]="coach.fotoPerfil" alt="Foto de perfil de coach nutricional" class="perfil-imagen">
         <div class="information">
           <h3 class="nombre-coach">{{ coach.nombre }}</h3>
           <h3>Especialidad: {{ coach.especialidad }}</h3>
