--- a/src/app/member/components/member-dashboard/member-dashboard.component.html
+++ b/src/app/member/components/member-dashboard/member-dashboard.component.html
@@ -8,13 +8,12 @@
       <img src="assets/images/icons/chat-icon.png" alt="chat-icon" class="chat-icon">
     </a>
   </div>
-
 </header>
 
 <div class="sentence">
   <p class="sentence-text-left">¡Cada repetición te acerca a tus metas!</p>
   <p class="sentence-text-right">
-    <img src="assets/images/member/member-days-count.png" alt="member-days" class="member-days-count">Vas 3 dias seguidos de entrenamiento
+    <img src="assets/images/member/member-days-count.png" alt="member-days" class="member-days-count">Es tu primer día de entrenamiento, ¡Vamos por más!
   </p>
 </div>
 
@@ -24,8 +23,8 @@
     <button mat-raised-button class="sections-button" routerLink="/member-trainings">Seguir</button>
   </mat-card>
   <mat-card class="sections-card">
-    <p>Notas de tu Coach</p>
-    <button mat-raised-button class="sections-button">Ver</button>
+    <p>Ver Progreso</p>
+    <button mat-raised-button class="sections-button" routerLink="/member-progress">Ver</button>
   </mat-card>
   <mat-card class="sections-card">
     <p>Tus Objetivos Diarios</p>
@@ -38,7 +37,7 @@
   <mat-card class="notifications-card">
     <mat-card class="member-notification">
       <p class="notification-title">¡No olvides tu rutina de hoy!</p>
-      <p class="notification-content">Recuerda que hoy es el dia de trabajar piernas</p>
+      <p class="notification-content">Recuerda que hoy es el día de trabajar piernas</p>
     </mat-card>
 
     <mat-card class="member-notification">
@@ -59,5 +58,3 @@
   <p>Dirección: Av. de la Fuerza, 123, Ciudad Gimnasio</p>
   <p>Teléfono: (555) 123-4567 | Email: info&commat;FitHubPro.com</p>
 </footer>
-
-
